# soundcloud-cli

./: .gitignore  README.md  pyproject.toml
sc_cli/: __init__.py  api.py  main.py  player.py
tests/: test_api.py  test_main.py  test_player.py
