[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sc-cli"
version = "0.1.0"
description = "A CLI tool for SoundCloud — search, play, stream, and download tracks"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
    "yt-dlp>=2023.1",
]

[project.scripts]
sc = "sc_cli.main:cli"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "requests-mock"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["sc_cli"]

[tool.hatch.build.targets.wheel]
packages = ["sc_cli"]
